@@ -1,3 +1,8 @@
+2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/op_bfd.cpp: show filename when warning about no debug
+	  information available
+
 2003-10-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* events/ia64/itanium/events: counter 0,1 not 2,3 for IA64_INST_RETIRED
@@ -28,7 +33,7 @@
 
 2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>
 
-	* events/ia64/itanium/events: correct counter avalaible according
+	* events/ia64/itanium/events: correct counter available according
 	  to intel doc.
 
 2003-10-15  John Levon  <levon@movementarian.org>
